# gateway-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  api_key_cli.py  api_key_manager.py  auth.py  config.py  docker-compose.yml  generate_api_key.py  internal_client.py  main.py  pyproject.toml  pytest.ini  setup-ssl.sh
api/: __init__.py
api/v1/endpoints/: __init__.py  health.py  internal.py
app/: main.py
app/api/: deps.py
app/api/v1/: __init__.py  router.py
app/cli/: __init__.py  migrate_to_postgres.py
app/core/: __init__.py  config.py
app/db/: __init__.py  database.py  manager.py
app/models/: api_key.py  auth.py  db_models.py
app/repositories/: __init__.py  api_key_repository.py
app/services/: api_key_service.py  api_key_service_v2.py  auth_service.py  auth_service_v2.py
app/static/: index.html
app/static/css/: style.css
app/static/js/: app.js
app/tests/: __init__.py  conftest.py  test_api_key_service.py  test_auth_service.py  test_endpoints.py
app/utils/: hashing.py  security.py
cli/: api_key_cli.py
db/migrations/: __init__.py
fail2ban/: jail.local
fail2ban/filter.d/: api-abuse.conf  nginx-badbots.conf  nginx-http-auth.conf  nginx-limit-req.conf  webdav-auth.conf
models/: __init__.py
nginx/: README.md
nginx/conf/: default.conf  default.conf.backup  nginx.conf
nginx/conf/global/: client-limits.conf  log-format.conf  rate-limits.conf  resolver.conf  ssl-params.conf  taiwan-ip-ranges.conf
nginx/conf/security/: auth-endpoints.conf
services/: __init__.py  auth_service.py
utils/: __init__.py
(+11 files in other folders)
